--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
@@ -18,6 +19,7 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.5.4",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.10"
   }
 }
